syntax = "proto3";

package abi;

message ImageSpec{
  repeated Spec specs = 1;
}

message Resize{
  uint32 width = 1;
  uint32 height = 2;

  enum ResizeType{
    NORMAL = 0;
    SEAM_CARVE = 1;
  }

  ResizeType r_type = 3;

  enum SampleFilter{
    UNDEFINED = 0;
    NEAREST = 1;
    TRIANGLE = 2;
    CATMULL_ROM = 3;
    GAUSSIAN = 4;
    LANCZOS3 = 5;
  }

  SampleFilter filter = 4;
}

message Spec{
  oneof data{
    Resize resize = 1;
    Crop crop = 2;
    FlipV flipv = 3;
    FlipH fliph = 4;
    Contrast contrast = 5;
    Filter filter = 6;
    WaterMark watermark = 7;
  }
}

message Crop{
  uint32 x1 = 1;
  uint32 x2 = 2;
  uint32 y1 = 3;
  uint32 y2 = 4;
}

message FlipH{}
message FlipV{}

message Contrast{float contrast = 1;}

message Filter{
  enum Filter{
    UNSPECIFIED = 0;
    OCEANIC = 1;
    ISLANDS = 2;
    MARINE = 3;
    // more: https://docs.rs/photon-rs/0.3.1/photon_rs/filters/fn.filter.html
  }

  Filter filter = 1;
}

message WaterMark{
  uint32 x = 1;
  uint32 y = 2;
}

